RESOLVED FIXED26656
[Chromium] Fix crash with inherited font-size in <option>
https://bugs.webkit.org/show_bug.cgi?id=26656
Summary [Chromium] Fix crash with inherited font-size in <option>
Adam Langley
Reported 2009-06-23 13:22:34 PDT
In r42597 (https://bugs.webkit.org/show_bug.cgi?id=25244), I changed the <select> handing for Chromium to fix a rendering bug. However, although the font-size is correctly ignored, getRowHeight wasn't updated and so was calculating the height of the rows in an inconsistent manner. This can lead to a crash. http://code.google.com/p/chromium/issues/detail?id=14810
Attachments
patch (2.12 KB, patch)
2009-06-23 13:23 PDT, Adam Langley
no flags
patch (2.12 KB, patch)
2009-06-23 13:25 PDT, Adam Langley
eric: review+
Adam Langley
Comment 1 2009-06-23 13:23:53 PDT
Adam Langley
Comment 2 2009-06-23 13:25:52 PDT
Eric Seidel (no email)
Comment 3 2009-06-23 17:40:33 PDT
Comment on attachment 31730 [details] patch If you're intending the test change to test the crash, you need to add a comment to both the test and the ChangeLog. Since you're a committer, you can do that when you land. Is it not possible to test this change with LayoutTest instead of a manual-test?
Adam Langley
Comment 4 2009-06-23 19:34:23 PDT
> Is it not possible to test this change with LayoutTest instead of a > manual-test? I tried all manner of window.eventSender ticks to try and get it to trigger the crash, but none of them worked. Testing doesn't work very well with <selects>.
Note You need to log in before you can comment on or make changes to this bug.